# lmacjson

./: Cargo.toml  mac.json
.github/workflows/: main.yml
src/: json.rs  main.rs  sn.rs
