[package]
name = "lmacjson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"

[profile.release]
strip = true 
opt-level = "z"
lto = true
[target.x86_64-pc-windows-gun]
rustflags = ["-C", "target-feature=+crt-static"]